[package]
name = "jigshuffle"
version = "0.1.0"
edition = "2021"
authors = ["Dheatly23 <71598333+Dheatly23@users.noreply.github.com>"]
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
image = "0.24"
ndarray = { version = "0.15", features = ["rayon"] }
rand = "0.8.5"
rand_xoshiro = "0.6.0"
rayon = "1.7.0"
sha2 = "0.10.6"
